[gd_scene load_steps=5 format=3 uid="uid://by8v6box3new8"]

[ext_resource type="Script" path="res://scenes/pause.gd" id="1_xmmit"]
[ext_resource type="Theme" uid="uid://ck5vrvuxyujr" path="res://themes/font_theme.tres" id="2_k8x7e"]

[sub_resource type="InputEventAction" id="InputEventAction_7kekr"]
action = &"esc"

[sub_resource type="Shortcut" id="Shortcut_7lc1v"]
events = [SubResource("InputEventAction_7kekr")]

[node name="pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xmmit")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.301961)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -65.5
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_k8x7e")
shortcut = SubResource("Shortcut_7lc1v")
text = "Resume"

[node name="Restart" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_k8x7e")
text = "Restart"

[node name="Options" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_k8x7e")
text = "Options"

[node name="Exit menu" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_k8x7e")
text = "Exit menu"

[node name="Exit desktop" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_k8x7e")
text = "Exit desktop"

[connection signal="pressed" from="menu_holder/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="menu_holder/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="menu_holder/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="menu_holder/Exit menu" to="." method="_on_exit_menu_pressed"]
[connection signal="pressed" from="menu_holder/Exit desktop" to="." method="_on_exit_desktop_pressed"]
